--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@ video {
     width: 100%;
     max-height: 100%;
 }
+
+.hides {
+    transform: translateY(100%);
+    transition: all 0.7s ease;
+}
+.hides:hover {
+    transform: translateY(-0%);
+}
