--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@ video {
 }
 
 .hides {
-    transform: translateY(90%);
-    transition: all 0.7s ease;
+    /*transform: translateY(90%);*/
+    opacity: 0;
+    transition: all 1.3s ease;
 }
 .hides:hover {
-    transform: translateY(-0%);
+    /*transform: translateY(-0%);*/
+    opacity: 100%;
 }
